# the-prompt-library

./: .gitignore  CONTRIBUTING.md  README.md  SORT_BY_ARCHITECTURE.md  changes.md  journalist.md  mcp_config.yaml  prompt.schema.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-prompts.yml
data/: master_100_ai_prompts.csv
docs/: app.js  index.html  prompts.js  style.css
mcp_tool/: __init__.py  build_prompts_js.py  core.py  csv_to_yaml.py  interactive.py  llm_client.py  mcp.py  mcp_server.py  prompt_index.json  requirements.txt  testing.py  workflow.py
mcp_tool/temp_scripts/: add_tags_from_directory.py
prompt_workflows/: academic-research-assistant.workflow.yaml
prompts/-spawn/: prompt.prompt.yaml
prompts/academic-writing-research/: INDEX.md  academic-paraphrase-checker.prompt.yaml  citation-style-converter.prompt.yaml  conference-abstract-rewriter.prompt.yaml  empirical-result-interpreter.prompt.yaml  ethical-review-drafting-assistant.prompt.yaml  graduate-thesis-mentor.prompt.yaml  key-findings-extractor.prompt.yaml  literature-review-synthesizer.prompt.yaml  paper-summarizer.prompt.yaml  peer-review-critique-assistant.prompt.yaml  research-question-generator.prompt.yaml  statistical-methodologist.prompt.yaml  structured-abstract-composer.prompt.yaml
schemas/: prompt.schema.yaml  prompt.test.schema.yaml  workflow.schema.yaml
scripts/: generate_index.py
tests/: unit_test_generator.test.yaml
workflows/: content-marketing-campaign.workflow.yaml  test_workflow.workflow.yaml  user-story-to-code-test.workflow.yaml
(+491 files in other folders)
