[project]
name = "the-prompt-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.2.0",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "python-slugify>=8.0.4",
    "pyyaml==6.0.1",
    "ruff>=0.5.5",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
]
